[BACK-END] Endpoint users/login finished (JWT Token)
